--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
+    "@types/highlight.js": "^9.12.2",
     "angular2-moment": "^1.7.1",
     "bootstrap": "^4.0.0",
     "chokidar": "^2.0.0",
     "core-js": "^2.4.1",
+    "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "jsonfile": "^4.0.0",
     "node-powershell": "^3.3.1",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.13.0",
+    "regex-colorizer": "^0.3.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
   },
