Move electron files to separate folder Fix electron packager not copy native node modules Fix command trigger not report error Fix assets relative path

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron": "electron ./src/electron.dev",
-    "package:win": "npm run build && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=win32 --arch=all --overwrite",
-    "package:linux": "npm run build && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=linux --arch=all --overwrite",
-    "package:mac": "npm run build && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=mac --arch=all --overwrite",
+    "electron": "electron ./src/electron/electron.dev",
+    "electron-packager": "cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=win32 --arch=all --overwrite",
+    "package:win": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=win32 --arch=all --overwrite",
+    "package:linux": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=linux --arch=all --overwrite",
+    "package:mac": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=packages --platform=mac --arch=all --overwrite",
     "publish": "npm run package:win"
   },
   "private": true,
