--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "jsonfile": "^4.0.0",
+    "ngx-bootstrap": "^2.0.2",
     "ngx-highlightjs": "^1.4.0",
     "node-powershell": "^3.3.1",
     "popper.js": "^1.13.0",
-    "regex-colorizer": "^0.3.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
   },
