--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "ng": "ng",
     "start": "concurrently \"ng serve\" \"npm run electron\"",
-    "build": "ng build --prod",
+    "build": "ng build --prod && npm run build:electron",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron": "electron ./src/electron/electron.dev",
-    "package:win": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=dist/packages --platform=win32 --arch=all --overwrite=true",
-    "package:linux": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=dist/packages --platform=linux --arch=all --overwrite=true",
-    "package:mac": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=dist/packages --platform=mac --arch=all --overwrite=true",
-    "publish": "npm run package:win"
+    "electron": "tsc src/electron/electron.ts && electron ./src/electron/electron",
+    "build:electron": "tsc src/electron/electron.ts --outDir dist",
+    "dist:deprecate": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=dist/packages --platform=win32 --arch=all --overwrite=true",
+    "dist": "npm run build && electron-builder --dir --project dist",
+    "package": "npm run build && npm --prefix ./dist install ./dist && electron-builder --project dist",
+    "publish": "npm run package"
   },
   "private": true,
   "dependencies": {
@@ -30,14 +31,11 @@
     "angular2-elastic": "^0.13.0",
     "angular2-moment": "^1.7.1",
     "bootstrap": "^4.0.0",
-    "chokidar": "^2.0.0",
     "core-js": "^2.4.1",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
-    "jsonfile": "^4.0.0",
     "ngx-bootstrap": "^2.0.2",
     "ngx-highlightjs": "^1.4.0",
-    "node-powershell": "^3.3.1",
     "popper.js": "^1.13.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
@@ -50,19 +48,25 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.18",
     "@types/node": "^9.3.0",
+    "chokidar": "^2.0.0",
     "codelyzer": "^4.1.0",
     "concurrently": "^3.5.1",
     "cross-var": "^1.1.0",
     "electron": "^1.8.1",
+    "electron-builder": "^19.55.2",
+    "electron-is-dev": "^0.3.0",
     "electron-packager": "^10.1.1",
+    "electron-store": "^1.3.0",
     "jasmine-core": "^2.9.1",
     "jasmine-spec-reporter": "^4.2.1",
+    "jsonfile": "^4.0.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-powershell": "^3.3.1",
     "protractor": "^5.2.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
