Add folder browse support

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,4 @@
 {
-	"watchLocation": "D:\\Dropbox\\Software\\Development\\ScriptTrigger"
+	"watchLocation": "D:\\Dropbox\\Software\\Development\\ScriptTrigger",
+	"databaseLocation": ""
 }
