Add welcome section Add import function Add smooth scroll function

--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "script-trigger",
-  "version": "1.0.0",
-  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "concurrently \"ng serve\" \"npm run electron\"",
@@ -36,6 +33,7 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.2",
     "ngx-highlightjs": "^1.4.0",
+    "ngx-page-scroll": "^4.0.2",
     "popper.js": "^1.13.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
