Replace file watcher by pushbullet stream Fix extract command didn't ignore case Fix run commands didn't skip if empty

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,5 @@
 {
 	"watchLocation": "D:\\Dropbox\\Software\\Development\\ScriptTrigger",
+	"pushbulletApiKey": "o.XPsgNflDEA6HuvaJ5RTPm8WcFTpFJALv",
 	"databaseLocation": ""
 }
