--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-highlightjs": "^1.4.0",
     "ngx-page-scroll": "^4.0.2",
     "popper.js": "^1.13.0",
+    "pushbullet": "^2.1.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
   },
