--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -1,7 +1,7 @@
 {
   "name": "script-trigger",
   "productName": "ScriptTrigger",
-  "version": "3.0.0",
+  "version": "3.1.1",
   "author": {
     "name": "TNT",
     "email": "tnt1232007@gmail.com"
@@ -17,7 +17,7 @@
     "electron-store": "^1.3.0",
     "jsonfile": "^4.0.0",
     "node-powershell": "^3.3.1",
-    "popper.js": "^1.13.0"
+    "pushbullet": "^2.1.0"
   },
   "build": {
     "appId": "com.scriptrigger.tnt",
