--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.2",
     "ngx-highlightjs": "^1.4.0",
-    "ngx-page-scroll": "^4.0.2",
     "popper.js": "^1.13.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
@@ -53,6 +52,7 @@
     "electron": "^1.8.1",
     "electron-builder": "^19.55.2",
     "electron-is-dev": "^0.3.0",
+    "electron-log": "^2.2.14",
     "electron-packager": "^10.1.1",
     "electron-store": "^1.3.0",
     "jasmine-core": "^2.9.1",
