--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -1,7 +1,8 @@
 {
   "name": "script-trigger",
   "productName": "ScriptTrigger",
-  "version": "3.2.1",
+  "description": "",
+  "version": "3.3.0",
   "author": {
     "name": "TNT",
     "email": "tnt1232007@gmail.com"
@@ -14,6 +15,7 @@
   "dependencies": {
     "chokidar": "^2.0.0",
     "electron-is-dev": "^0.3.0",
+    "electron-log": "^2.2.14",
     "electron-store": "^1.3.0",
     "jsonfile": "^4.0.0",
     "node-powershell": "^3.3.1",
