Implement activity list

--- a/res/config.json
+++ b/res/config.json
@@ -1,4 +1,4 @@
 {
-	"pushbulletApiKey": "o.XPsgNflDEA6HuvaJ5RTPm8WcFTpFJALv",
-	"databaseLocation": ""
+	"pushbulletApiKey": "o.2qJqUuEBsPxT4ZrFjniqs25A0OlCTwZK",
+	"clearActivityAfterHours": 48
 }
