--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"ng serve\" \"npm run electron\"",
+    "start": "concurrently \"ng serve\" \"npm run start:electron\"",
     "build": "ng build --prod && npm run build:electron",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron": "tsc src/electron/electron.ts && electron ./src/electron/electron",
+    "start:electron": "tsc src/electron/electron.ts && electron ./src/electron/electron",
     "build:electron": "tsc src/electron/electron.ts --outDir dist",
-    "dist:deprecate": "npm run build && npm --prefix ./dist install ./dist && cross-var electron-packager dist $npm_package_name-$npm_package_version --out=dist/packages --platform=win32 --arch=all --overwrite=true",
     "dist": "npm run build && electron-builder --dir --project dist",
-    "package": "npm run build && npm --prefix ./dist install ./dist && electron-builder --project dist",
+    "package": "npm run build && electron-builder --project dist",
     "publish": "npm run package"
   },
   "private": true,
@@ -53,7 +52,6 @@
     "electron-builder": "^19.55.2",
     "electron-is-dev": "^0.3.0",
     "electron-log": "^2.2.14",
-    "electron-packager": "^10.1.1",
     "electron-store": "^1.3.0",
     "jasmine-core": "^2.9.1",
     "jasmine-spec-reporter": "^4.2.1",
