--- a/package.json
+++ b/package.json
@@ -14,59 +14,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.1",
-    "@angular/common": "^5.2.1",
-    "@angular/compiler": "^5.2.1",
-    "@angular/core": "^5.2.1",
-    "@angular/forms": "^5.2.1",
-    "@angular/http": "^5.2.1",
-    "@angular/platform-browser": "^5.2.1",
-    "@angular/platform-browser-dynamic": "^5.2.1",
-    "@angular/router": "^5.2.1",
-    "angular-confirmation-popover": "^4.0.0",
-    "angular2-elastic": "^0.13.0",
-    "angular2-moment": "^1.7.1",
-    "bootstrap": "^4.0.0",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^6.0.9",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/http": "^6.0.9",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
+    "angular-confirmation-popover": "^4.1.1",
+    "angular2-moment": "^1.9.0",
+    "bootstrap": "^4.1.2",
+    "core-js": "^2.5.7",
     "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
-    "ngx-bootstrap": "^2.0.2",
-    "ngx-highlightjs": "^1.4.0",
-    "popper.js": "^1.13.0",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.20"
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-highlightjs": "^2.1.1",
+    "popper.js": "^1.14.3",
+    "rxjs": "^6.2.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.5",
-    "@angular/compiler-cli": "^5.2.1",
-    "@angular/language-service": "^5.2.1",
-    "@types/jasmine": "^2.8.4",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.2.18",
-    "@types/node": "^9.3.0",
-    "chokidar": "^2.0.0",
-    "codelyzer": "^4.1.0",
-    "concurrently": "^3.5.1",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/language-service": "^6.0.9",
+    "@types/jasmine": "^2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.5",
+    "@types/node": "^10.5.2",
+    "chokidar": "^2.0.4",
+    "codelyzer": "^4.4.2",
+    "concurrently": "^3.6.0",
     "cross-var": "^1.1.0",
-    "electron": "^1.8.1",
-    "electron-builder": "^19.55.2",
+    "electron": "^2.0.5",
+    "electron-builder": "^20.24.4",
     "electron-is-dev": "^0.3.0",
-    "electron-log": "^2.2.14",
-    "electron-store": "^1.3.0",
-    "jasmine-core": "^2.9.1",
-    "jasmine-spec-reporter": "^4.2.1",
+    "electron-log": "^2.2.16",
+    "electron-store": "^2.0.0",
     "jsonfile": "^4.0.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "node-powershell": "^3.3.1",
-    "protractor": "^5.2.2",
-    "pushbullet": "^2.1.0",
-    "ts-node": "^4.1.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
+    "pushbullet": "^2.2.0",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
